--- a/playground/index.html
+++ b/playground/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
       <link rel="icon" href="/favicon.ico" type="image/x-icon"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue</title>
+    <title>Playground</title>
   </head>
   <body>
     <div id="app"></div>
